@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* Added kiosk mode
+* removed .idea
 * Fixed simple cli and set for module use
 * changed default path of config to /etc/.lluv
 * Packge
